--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -128,6 +128,17 @@ li {
     #3L > .gradient(#eeeeee, #ffffff);
 }
 
+.modal {
+    .widget { 
+        margin: 0;
+        background: none;
+
+        .widget-content {
+            padding: 0;
+        }
+    }
+}
+
 /* scroll - keep the save buttons into view
    --------------------------------------------------------- */
 
