--- a/modules/mod_menu/lib/css/zp-menuedit.css
+++ b/modules/mod_menu/lib/css/zp-menuedit.css
@@ -1,4 +1,4 @@
-/* z.menuedit.js
+/* zp-menuedit.css
 ----------------------------------------------------------
 
 @author Marc Worrell <marc@worrell.nl>
