--- a/modules/mod_authentication/lib/css/logon.css
+++ b/modules/mod_authentication/lib/css/logon.css
@@ -1,108 +1,85 @@
-/* Design for logon, password reminder etc. */
-
-div.logon_bottom {
-	text-align: center;
-	margin-top: 20px;
-        margin-bottom: 100px;
+.z-logon-box {
+  max-width: 320px;
+  margin: 0 auto 20px auto;
+  float: none;
+  /* Extra login options */
+  /* Supporting options */
+  /* Validation */
 }
-
-p#logon_reason {
-	margin-bottom: 30px;
+.z-logon-box ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-
-ul#logon_methods {
-	margin: 30px;
+.z-logon-box button[type="submit"],
+.z-logon-box input[type="submit"] {
+  width: 100%;
 }
-
-div#logon_box {
-    text-align: left;
-    width: 380px;
-    margin: 0 auto;
-    padding: 30px;
-    padding-bottom: 10px;
-    margin-top: 100px;
-
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-
-    box-shadow: 0 0 6px #999;
-    -webkit-box-shadow: 0 0 6px #999;
-    -moz-box-shadow: 0 0 6px #999;
-
-    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#999999')";
-    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=135, Color='#999999');
+.z-logon-box .z-logon-form,
+.z-logon-box .z-logon-error-message {
+  margin: 20px 0;
+  padding: 20px;
 }
-
-#logon_box form input[type="text"],
-#logon_box form input[type="password"] {
-    font-size: 18px;
-    height: 32px;
+.z-logon-box .z-logon-form {
+  background-color: #f2f2f2;
 }
-
-#logon_box form div.buttons {
-    margin-top: 30px;
+.z-logon-box .z-logon-extra .z-logon-extra-separator {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  line-height: 16px;
+  margin: 15px -20px 7.5px -20px;
 }
-
-#logon_box form div.buttons p {
-    margin-top: 9px;
+.z-logon-box .z-logon-extra .z-logon-extra-separator:before {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 16px;
+  top: 8px;
+  width: 40px;
+  background-color: #f2f2f2;
+  content: "";
+  margin: -8px 0 0 -20px;
+  z-index: -1;
 }
-
-#logon_box form .z_validation_message {
-    position: absolute;
-    padding-left: 4px;
-    color: red;
+.z-logon-box .z-logon-extra .z-logon-extra-separator:after {
+  position: absolute;
+  left: 0;
+  top: 8px;
+  content: " ";
+  width: 320px;
+  border-bottom: 1px solid #dddddd;
+  z-index: -2;
 }
-
-#logon_box form .form-field-error,
-#logon_box form .form-field-error:focus {
-    border-color: red;
+.z-logon-box .z-logon-extra .z-logon-extra-separator:first-child {
+  display: none;
 }
-
-
-div#logon_box.logon_error  {
-    width: 600px;
+.z-logon-box .z-logon-support {
+  margin: 20px -20px 0 -20px;
+  padding: 15px 20px 0 20px;
+  border-top: 1px solid #dddddd;
 }
-
-div#logon_error {
-    margin: 0 18px 18px 0px;
-    padding-right: 18px;
-    border-right: 1px solid #ccc;
-    width: 260px; 
-    float: left; 
-    text-align: left;
-    display: none;
+.z-logon-box .z-logon-support :last-child {
+  margin-bottom: 0;
 }
-
-h1.logon_header.error {
-    color: red;
+.z-logon-box .z-logon-support:empty {
+  display: none;
 }
-
-div#logon_box.logon_error div#logon_error  {
-    display: block;
+.z-logon-box .form-field-error,
+.z-logon-box .form-field-error:focus {
+  border-color: #c21c3d;
 }
-div#logon_box.logon_error div#logon_form  {
-    margin-left: 300px;
+.z-logon-box .z-logon-error-message {
+  display: none;
+  background-color: #fbe5ec;
+  padding: 20px;
 }
-
-
-div#logon_error h2 {
-	color: #d80000;
+.z-logon-box .z-logon-error-message :first-child {
+  margin-top: 0;
 }
-
-div#logon_button {
-	text-align: center;
+.z-logon-box .z-logon-error-message :last-child {
+  margin-bottom: 0;
 }
-
-
-p.logon_link {
-	margin: 0;
-}
-
-#logon_methods {
-    list-style-type: none;
-}
-
-#logon_methods img {
-	float: none;
+.z-logon-box.z-logon-error .z-logon-error-message {
+  display: block;
 }
