--- a/modules/mod_admin/lib/less/connections-list.less
+++ b/modules/mod_admin/lib/less/connections-list.less
@@ -1,9 +1,6 @@
 ul.connections-list {
-    padding-bottom: 8px;
-    min-height: 1em;
-
-    &:empty {
-        display: none;
+    li:last-child {
+        margin-bottom: 10px;
     }
 }
 a span.category {
