--- a/modules/mod_admin/lib/less/tree-list.less
+++ b/modules/mod_admin/lib/less/tree-list.less
@@ -1,11 +1,15 @@
 ul.tree-list {
-    margin: 0 0 @baseMargin 0;
+    margin: 0;
     
-    li {
+    > li {
         @_side_spacing: 8px;
         @_vertical_spacing: 10px;
         
         line-height: 1.2;
+        
+        &:last-child {
+            margin: 0 0 @widgetVerticalPadding 0;
+        }
         
         > div {
             position: relative;
