mod_admin: enable "All pages" button when qcat is defined

--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -86,6 +86,11 @@ p {
     padding: 1px;
 }
 
+.z-button-row {
+    // horizontal buttons: prevent extra spacing between inline-block elements
+    font-size: 0;
+}
+
 // extensible
 
 .admin-image-border {
