--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -98,6 +98,9 @@ ul.media > li.ui-sortable-placeholder {
   font-size: 16px;
   padding: 1px;
 }
+.z-button-row {
+  font-size: 0;
+}
 .admin-image-border,
 div.admin-edit-media,
 img.admin-list-dashboard {
