--- a/modules/mod_admin/lib/less/logon.less
+++ b/modules/mod_admin/lib/less/logon.less
@@ -3,7 +3,7 @@
     @_width: 480px;
     @_spacing: 20px;
     @_form_spacing: 15px; // Bootstrap default
-    @_border_color: #ddd;
+    @_border_color: @borderColorMedium;
     
     max-width: @_width;
     margin: 100px auto;
