--- a/modules/mod_admin/lib/less/status-leds.less
+++ b/modules/mod_admin/lib/less/status-leds.less
@@ -52,7 +52,7 @@ span.icon_status {
         width: @_inner_size;
         height: @_inner_size;
         content: " ";
-        background-color: #eee;
+        background-color: @backgroundColorLight;
         z-index: 1;
     }
     
