--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -122,7 +122,7 @@ li {
 }
 
 .widget ul.nav-tabs li.active > a {
-    #3L > .gradient(#eeeeee, #ffffff);
+    #3L > .gradient(@backgroundColorLight, #ffffff);
 }
 
 .modal {
