--- a/modules/mod_admin/lib/less/map.less
+++ b/modules/mod_admin/lib/less/map.less
@@ -1,7 +1,7 @@
 .map-wrapper {
 	height: 300px;
 	width: 610px;
-	border: 3px solid #ddd;
+	border: 3px solid @borderColorMedium;
 	margin: 0 0 9px 0;
 	#3L > .border-radius(6px);
 }
