--- a/modules/mod_admin/lib/less/edit-media.less
+++ b/modules/mod_admin/lib/less/edit-media.less
@@ -2,18 +2,20 @@
     position: relative;
 }
 .admin-cropguide {
+    @_opacity_light: 0.5;
+    @_opacity_dark: 0.25;
     position: absolute;
 
     &.admin-cropguide-horiz {
-        border-top: 1px dotted rgba(255,255,255,0.7);
-        border-bottom: 1px dotted rgba(0,0,0,0.7);
+        border-top: 1px solid rgba(255, 255, 255, @_opacity_light);
+        border-bottom: 1px solid rgba(0, 0, 0, @_opacity_dark);
         height: 0;
         left: 0;
         right: 0;
     }
     &.admin-cropguide-vert {
-        border-left: 1px dotted rgba(255,255,255,0.7);
-        border-right: 1px dotted rgba(0,0,0,0.7);
+        border-left: 1px solid rgba(255, 255, 255, @_opacity_light);
+        border-right: 1px solid rgba(0, 0, 0, @_opacity_dark);
         width: 0;
         top: 0;
         bottom: 0;
