mod_admin: smaller crop center lines

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -244,14 +244,14 @@ ul.blocks.ui-sortable .form-control.block-name:focus {
   position: absolute;
 }
 .admin-cropguide.admin-cropguide-horiz {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.65);
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   height: 0;
   left: 0;
   right: 0;
 }
 .admin-cropguide.admin-cropguide-vert {
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.65);
   border-right: 1px solid rgba(0, 0, 0, 0.25);
   width: 0;
   top: 0;
@@ -294,25 +294,14 @@ ul.media > li.sortable {
   cursor: move;
 }
 ul.media > li figure {
-  width: 182px;
-  max-width: 182px;
-  height: 182px;
-  max-height: 182px;
-  overflow: hidden;
   position: relative;
-  display: block;
-  position: absolute;
-  top: 5px;
-  bottom: 5px;
-  left: 5px;
-  right: 5px;
   margin: auto;
-  bottom: auto;
 }
 ul.media > li img {
   display: block;
   border: 1px solid #eeeeee;
-  margin: 0 auto;
+  max-width: 180px;
+  margin: auto;
 }
 ul.media > li .z-close-btn {
   position: absolute;
