--- a/modules/mod_admin/lib/less/base.less
+++ b/modules/mod_admin/lib/less/base.less
@@ -96,8 +96,11 @@ p {
 }
 
 .z-button-row {
-    // horizontal buttons: prevent extra spacing between inline-block elements
-    font-size: 0;
+    #3L > .clearfix;
+    
+    > * {
+        float: left;
+    }
 }
 
 // extensible
